--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,27 @@
-fastapi
-uvicorn
-gunicorn
-gevent
+atomicwrites==1.3.0
+attrs==19.3.0
+certifi==2019.9.11
+click==7.1.1
+fastapi==0.54.1
+gevent==1.5.0
+greenlet==0.4.15
+gunicorn==20.0.4
+h11==0.9.0
+httptools==0.1.1
+more-itertools==8.2.0
+nptyping==1.0.1
+numpy==1.18.3
+packaging==20.3
+pluggy==0.13.1
+py==1.8.1
+pydantic==1.4
+pyparsing==2.4.7
+pytest==5.2.2
+redis==3.4.1
+six==1.14.0
+starlette==0.13.2
+typish==1.6.0
+uvicorn==0.11.3
+uvloop==0.14.0
+wcwidth==0.1.9
+websockets==8.1
